  * Switch source format to 3.0 (native).
  * Drop useless debian/dirs.
  * Fix maintainer scripts to not call programs with absolute path.
  * Drop sbin/lcs-security-config.sh which is an unused empty file.
  * Drop ${shlibs:Depends} which does not make sense on a architecture
    all package.
  * Add lintian overrides to ignore dir-or-file-in-var-www.

 -- Raphaël Hertzog <hertzog@debian.org>  Mon, 05 Oct 2015 15:17:33 +0200

lcs-security (2.4.10) Lcs; urgency=low

  * Make a 2.4.10 stable release for Wheezy
  * Modify fail2ban rules for ssh and sftp
  
  [Philippe Leclerc]
  * new function check_acces() in mod_security.php 
  * add security rule  on failed token 
  * add security rule on invalid request
  * add security rule on shellcode request

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 05 Jun 2015 11:21:34 +0300

lcs-security (2.4.9.3~1) unstable; urgency=low

  * lcs-security : activation bugfix
  * add remote ssh feature form XenEdu

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Thu, 07 Mar 2013 15:41:30 +0100

lcs-security (2.4.9.1) Lcs; urgency=low

  * lcs-security : fix menu url

 -- Jean-Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 14 Dec 2012 17:26:03 +0100

lcs-security (2.4.9.1~6) Lcs; urgency=low

  * add documentation for lcs-security modules
  * fixes somes paths 
  * add lock for enable/disable mod_security
  * disable mod_security

 -- Jean-Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 23 Nov 2012 16:32:17 +0100

lcs-security (2.4.9.1~3) Lcs; urgency=low

  * add warning for simultaneous root access

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Tue, 05 Nov 2012 13:52:22 +0100

lcs-security (2.4.9.1~2) Lcs; urgency=low

  * add log for sudo
  * adding apache security mod
  * fix post install
  * add security rules instead of download them

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Mon, 10 Sep 2012 16:01:49 +0200

lcs-security (2.4.9) Lcs; urgency=low

  * Make a 2.4.9 release 
