@@ -13,25 +13,22 @@ install:
 	install -d $(DESTDIR)/etc/lcs/sudo.d
 	install -d $(DESTDIR)/etc/apache2/modsecurity.d
 	install -d $(DESTDIR)/usr/share/lcs/scripts
-   # copy and chmod
+	# copy and chmod
 	cp -a conf/* $(DESTDIR)/etc/
 	install -m 755 scripts/* $(DESTDIR)/usr/share/lcs/scripts 
 	chmod 644  $(DESTDIR)/etc/cron.d/lcs-save-ldap
 	chmod 755  $(DESTDIR)/etc/cron.weekly/lcs-save-sql
-	install -d $(DESTDIR)/root
-	cp -a root/.bashrc $(DESTDIR)/root/
 	install -d $(DESTDIR)/var
 	cp -a var/*  $(DESTDIR)/var/	
 	# install sbin
 	install -d $(DESTDIR)/usr/sbin
 	install -m 755 sbin/* $(DESTDIR)/usr/sbin/
-	
-	 # install home RSSH
-	 install -d $(DESTDIR)/home/
-	 install -d $(DESTDIR)/home/rssh
-	 cp -a home/* $(DESTDIR)/home/
-
-# install doc
+	# install home RSSH
+	install -d $(DESTDIR)/usr/share/lcs-security/
+	cp -a home/* $(DESTDIR)/usr/share/lcs-security/
+	# install default .bashrc
+	cp -a root/.bashrc $(DESTDIR)/usr/share/lcs-security/
+	# install doc
 	install -d $(DESTDIR)/usr/share/doc/lcs/security/html
 	cp -a doc-html/* $(DESTDIR)/usr/share/doc/lcs/security/html/
 	
